--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,4 +26,5 @@
 @import './componentes/carousel';
 @import './componentes/main';
 @import './componentes/footer';
+@import './componentes/contacto';
 @import './componentes/media';
